impostazione container. Non ancora sopra all'header

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 <body>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
-    <div id="app">
+    <header></header>
+    <main>
+        <div id="app" class="container">
 
 
 
-    </div>
-    
+        </div>
+    </main>
    
 
 
