cambiate nuovamente dimensioni del container + aggiunte due section dentro il container. Iserite prima img e icone

--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
     <header></header>
     <main>
         <div id="app" class="container">
-
+            <div class="contatti d-flex justify-btw">
+                <section>
+                    <img src="./img/avatar_io.jpg" alt="Sofia Avatar">
+                </section>
+                <section>
+                    <i class="fa-solid fa-circle-notch"></i>
+                    <i class="fa-solid fa-message"></i>
+                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                </section>
+            </div>
+            <div class="chat d-flex justify-btw"></div>
 
 
         </div>
